# homey-app-test

./: .gitignore  REFERENCE-IMPLEMENTATIONS.md  package-lock.json  tmpclaude-e76d-cwd
.github/: copilot-instructions.md
api-access/: homey-query.js  package-lock.json  package.json
clevertouch/: README.md  implementation-plan.md
clevertouch-app/: .gitignore  README.md  app.js  package.json  tmpclaude-90c5-cwd
custom-device/: ai-coding-agent-homey-zigbee-instructions.md
docs/: 00-overview.md  01-environment-setup.md  02-project-structure-homey-compose.md  03-dev-loop-run-install-debug.md  04-coding-guidelines.md  05-drivers-devices-capabilities.md  06-flows.md  07-testing-validation.md  08-versioning-migration-release.md  09-troubleshooting.md  10-security-privacy.md  11-publishing-to-app-store.md  12-local-installation.md  13-oauth2-cloud-devices.md  14-ha-app-to-homey-migration.md
dreame/: dreame-app-for-homey.md
dreame-app/: .gitignore  app.js  package.json  test-login.js
energy-analyzer/: energy-gap-analyzer-plan.md  homey-energy-instructions.md
energy-analyzer-app/: app.js
homey-agent/: Makefile  issues.md  pyproject.toml
homey-agent/src/homey_mcp/: __init__.py
homey-agent/src/homey_mcp/client/: energy.py  insights.py
homey-agent/src/homey_mcp/tools/: __init__.py
homey-agent/src/homey_mcp/tools/device/: __init__.py
homey-agent/src/homey_mcp/tools/flow/: __init__.py
homey-agent/src/homey_mcp/tools/insights/: __init__.py  device_data.py  live.py
homey-agent/tests/: test_basic.py  test_server.py
keba-app/: README.md  app.js  package.json  (+1 more)
(+196 files in other folders)
